feat: add User entity, DB-backed auth, registration endpoint, and test suite